gitops/monitoring/configs/base/grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: shared-gateway
      namespace: shared-gateway
      sectionName: https
  hostnames:
    - grafana-staging.aws.raymondcollazo.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: monitoring-kube-prometheus-stack-grafana
          port: 80
